# scn-llm-prototype

./: .gitignore  .zenodo.json  BUILD.md  CITATION.cff  LICENSE  README.md  pyproject.toml
benchmark/: LICENSE  README.md  build_benchmark.py  reference_solver.py  score.py
benchmark/v1.0/: MANIFEST.json  labels.json  schedule.csv
results/: RESULTS.md  controls.csv  dynamics.csv  free_run_periods.csv  latency.csv  overhead_projection.csv  schedule_meta.json  trajectory.csv
scnllm/: __init__.py  bench.py  controls.py  oscillator.py  prc.py  rag_modulation.py  state_vector.py  zeitgeber.py
scripts/: plot.py  reproduce.py
tests/: test_benchmark_score.py  test_scnllm.py
