[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scnllm-prototype"
version = "0.1.0"
description = "Single-machine synthetic reference implementation of the SCN-LLM temporal module"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sebastian Cochinescu" }]
keywords = ["circadian", "oscillators", "entrainment", "llm", "retrieval"]
dependencies = ["numpy>=2.0", "scipy>=1.14", "matplotlib>=3.9"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/cochinescu/scn-llm-prototype"

# Explicit package discovery: the flat layout has non-package data dirs
# (results/, benchmark/) that setuptools auto-discovery would otherwise treat
# as top-level packages and refuse to build. Ship only the importable package.
[tool.setuptools]
packages = ["scnllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
